[package]
name = "arca"
version = "0.3.7"
edition = "2021"
license = "MIT"
description = "Various utilities used in my crates"
repository = "https://github.com/arcanis/arca-rs.git"

[dependencies]
clean-path = "0.2.1"
napi = { version = "2.13.1", default-features = false, features = [], optional = true }
path-slash = "0.2.1"
radix_trie = "0.2.1"
serde_derive = { version = "1.0.163", optional = true }
serde = { version = "1.0.163", optional = true }

[dev-dependencies]
serde_json = "1.0.96"

[features]
serde = ["dep:serde_derive", "dep:serde"]
napi = ["dep:napi"]
